# lumi_test

./: .gitignore  Dockerfile.api  compose.yaml  readme.md
app/: alembic.ini  main.py  pyproject.toml
app/alembic/: env.py
app/alembic/versions/: 226c2112d4d6_add_new_tables.py  91ddf2df98e2_create_tables.py
app/db/: __init__.py  accounts.py  transactions.py
app/models/: accounts.py  transactions.py
app/routers/: accounts.py  transactions.py
app/services/: accounts.py  transactions.py
tests/: conftest.py  test_integration.py  test_services_accounts.py  test_services_transactions.py
