[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "IlyaFaer",email = "gurovilya9@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.135.1,<0.136.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "sqlmodel (>=0.0.37,<0.0.38)",
    "psycopg[binary] (>=3.3.3,<4.0.0)",
    "alembic (>=1.18.4,<2.0.0)"
]

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
